<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="contactElement"
            type="com.example.contactsmadarsoft.models.ContactsModel" />

        <variable
            name="clickListener"
            type="com.example.contactsmadarsoft.adapter.ContactListItemListener" />

    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_4"
        android:layout_marginTop="@dimen/margin_2"
        android:layout_marginEnd="@dimen/margin_4"
        android:layout_marginBottom="@dimen/margin_2"
        app:cardCornerRadius="@dimen/margin_8"
        app:cardElevation="@dimen/margin_8">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{()-> clickListener.onContactItemClick(contactElement)}"
            app:layoutBackGround="@{contactElement}">

            <ImageView
                android:id="@+id/userImg_rowElement"
                android:layout_width="@dimen/width_45"
                android:layout_height="@dimen/width_45"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_8"
                android:layout_marginBottom="@dimen/margin_8"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/userName_rowElement"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_8"
                android:layout_marginEnd="@dimen/margin_8"
                android:textColor="#000000"
                android:textSize="@dimen/text_20"
                app:layout_constraintEnd_toStartOf="@+id/userAge_rowElement"
                app:layout_constraintStart_toEndOf="@+id/userImg_rowElement"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/name_hint" />

            <TextView
                android:id="@+id/yearsOld_rowElement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8"
                android:layout_marginEnd="@dimen/margin_16"
                android:text="@string/years_old"
                android:textColor="#000000"
                android:textSize="@dimen/text_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Years Old" />

            <TextView
                android:id="@+id/userAge_rowElement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8"
                android:layout_marginEnd="@dimen/margin_4"
                android:textColor="#000000"
                android:textSize="@dimen/text_16"
                app:layout_constraintBottom_toBottomOf="@+id/yearsOld_rowElement"
                app:layout_constraintEnd_toStartOf="@+id/yearsOld_rowElement"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="26" />

            <TextView
                android:id="@+id/userJobTitle_rowElement"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_4"
                android:layout_marginEnd="@dimen/margin_16"
                android:layout_marginBottom="@dimen/margin_8"
                android:text="@{contactElement.contactJobTitle}"
                android:textSize="@dimen/text_16"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/userName_rowElement"
                app:layout_constraintTop_toBottomOf="@+id/userName_rowElement"
                tools:text="@string/job_title_hint" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>
</layout>